docs/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: marketing-mail
  labels:
    name: marketing-mail
    app: laravel-marketing-mail
