docs/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marketing-mail-service
  namespace: marketing-mail
  labels:
    app: marketing-mail
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: marketing-mail
